# ya_note

./: .flake8  .gitignore  conftest.py  pyproject.toml  pytest.ini  requirements.txt
notes/: models.py
notes/pytest_tests/: test_content.py  test_logic.py  test_routes.py
notes/tests/: test_content.py  test_logic.py  test_routes.py  test_trial.py
yanote/: settings.py
