[tool.poetry]
name = "ya-note"
version = "0.1.0"
description = "A small never-forget-what-your-record-in-here app."
authors = ["Кирилл Кувшинов <k.koovshinov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ya_note"}]

[tool.poetry.dependencies]
python = "^3.9.10"
django = "3.2.15"
pytils = "0.4.1"
pytest = "7.1.3"
pytest-django = "4.5.2"
pytest-lazy-fixture = "0.6.3"
mypy = "^1.5.1"
django-stubs = "^4.2.3"
flake8 = "^6.1.0"
ruff = "^0.0.285"


[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "yanote.settings"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
